# ServerAPI/src/application/services/auth.service.ts
@@ -1,5 +1,6 @@
 import { inject, injectable, singleton } from "tsyringe";
 import { AuthDTO, AuthTokenDTO } from "../dtos/auth.dto";
+import { UserCreateDTO } from "../dtos/user.dto";
 import { IAuthenticationProvider } from "../interfaces/authentication/authentication.provider";
 import { IUserRepository } from "../interfaces/persistence/user.repository";
 
@@ -16,14 +17,26 @@ export default class AuthService {
     this.userRepository = userRepository;
   }
 
-  async register(
+  async registerWithEmail(
     currUser: null,
-    payload: AuthDTO,
+    payload: AuthDTO & UserCreateDTO,
     params: null
   ): Promise<AuthTokenDTO> {
-    //TODO: Add to User Table
-    return await this.authProvider.register(payload);
+    const auth = await this.authProvider.register(payload);
+    const user = await this.userRepository.create({
+      id: auth.id,
+      username: payload.username,
+      fullName: payload.fullName,
+      email: auth.email,
+    });
+    return this.authProvider.signIn(payload);
   }
+
+  //TODO: Registered with Phone Number
+  async registerWithPhoneNumber() {}
+
+  //TODO: Registered with Google
+  async registerWithGoogle() {}
 
   async login(
     currUser: null,
